Code Refactor For DB User
Code Refactor For DB User &
Swagger Added