@@ -22,10 +22,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -84,13 +85,12 @@ public class AuthServiceImpl implements AuthService {
         logger.info("Request signInAppUser :- " + payload);
         // spring auth manager will call user detail service
         Authentication authentication = this.authenticationManager.authenticate(
-             new UsernamePasswordAuthenticationToken(payload.getUsername(), payload.getPassword()));
+            new UsernamePasswordAuthenticationToken(payload.getUsername(), payload.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
         // get the user detail from authentication
         UserSessionDetail userDetails = (UserSessionDetail) authentication.getPrincipal();
-        String jwtToken = this.jwtUtils.generateTokenFromUsername(userDetails.getUsername());
         RefreshToken refreshToken = this.refreshTokenService.createRefreshToken(userDetails.getId(), payload.getIpAddress());
-        AuthResponse authResponse = new AuthResponse(jwtToken, refreshToken.getToken());
+        AuthResponse authResponse = new AuthResponse(this.jwtUtils.generateTokenFromUsername(userDetails.getUsername()), refreshToken.getToken());
         authResponse.setIpAddress(payload.getIpAddress());
         return new AppResponse(BarcoUtil.SUCCESS, MessageUtil.USER_SUCCESSFULLY_AUTHENTICATE, this.getAuthResponseDetail(authResponse, userDetails));
     }
@@ -133,19 +133,14 @@ public class AuthServiceImpl implements AuthService {
          * AND THEY WILL GET THE NORMAL ACCOUNT TYPE
          * AND THEY WILL GET THE USER DEFAULT PROFILE
          * AND THEY WILL GET THE USER DEFAULT USER ROLE
+         * => admin can change the account type and profile type and role type
          * **/
         // register user will get the default role USER
-        Optional<Role> userRole = this.roleRepository.findByNameAndStatus(
-            this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.DEFAULT_ROLE).getLookupValue(), APPLICATION_STATUS.ACTIVE);
-        if (userRole.isPresent()) {
-            appUser.setAppUserRoles(Set.of(userRole.get()));
-        }
+        this.roleRepository.findByNameAndStatus(this.lookupDataCacheService.getParentLookupDataByParentLookupType(
+           LookupUtil.DEFAULT_ROLE).getLookupValue(), APPLICATION_STATUS.ACTIVE).ifPresent(role -> appUser.setAppUserRoles(Set.of(role)));
         // register user will get the default profile USER
-        Optional<Profile> userProfile = this.profileRepository.findProfileByProfileName(
-            this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.DEFAULT_PROFILE).getLookupValue());
-        if (userProfile.isPresent()) {
-            appUser.setProfile(userProfile.get());
-        }
+        this.profileRepository.findProfileByProfileName(this.lookupDataCacheService.getParentLookupDataByParentLookupType(
+           LookupUtil.DEFAULT_PROFILE).getLookupValue()).ifPresent(appUser::setProfile);
         // register user account type as 'Customer'
         appUser.setAccountType(ACCOUNT_TYPE.NORMAL);
         this.appUserRepository.save(appUser);
@@ -154,13 +149,11 @@ public class AuthServiceImpl implements AuthService {
             this.lookupDataCacheService.getParentLookupDataByParentLookupType(LookupUtil.ROOT_USER).getLookupValue(), APPLICATION_STATUS.ACTIVE);
         if (superAdmin.isPresent()) {
             // linking all env variable to the user give by the system
-            for (EnvVariables envVariables : this.envVariablesRepository.findAllByCreatedByAndStatusNotOrderByDateCreatedDesc(
-                superAdmin.get(), APPLICATION_STATUS.DELETE)) {
+            for (EnvVariables envVariables : this.envVariablesRepository.findAllByCreatedByAndStatusNotOrderByDateCreatedDesc(superAdmin.get(), APPLICATION_STATUS.DELETE)) {
                 this.appUserEnvRepository.save(this.getAppUserEnv(superAdmin.get(), appUser, envVariables));
             }
             // event bridge only receiver event bridge if exist and create by the main user
-            for (EventBridge eventBridge : this.eventBridgeRepository.findAllByBridgeTypeInAndCreatedByAndStatusNotOrderByDateCreatedDesc(
-                Arrays.asList(EVENT_BRIDGE_TYPE.WEB_HOOK_RECEIVE), superAdmin.get(), APPLICATION_STATUS.DELETE)) {
+            for (EventBridge eventBridge : this.eventBridgeRepository.findAllByBridgeTypeInAndCreatedByAndStatusNotOrderByDateCreatedDesc(List.of(EVENT_BRIDGE_TYPE.WEB_HOOK_RECEIVE), superAdmin.get(), APPLICATION_STATUS.DELETE)) {
                 LinkEBURequest linkEBURequest = new LinkEBURequest();
                 linkEBURequest.setId(eventBridge.getId());
                 linkEBURequest.setAppUserId(appUser.getId());
@@ -231,7 +224,7 @@ public class AuthServiceImpl implements AuthService {
     public AppResponse authClamByRefreshToken(TokenRefreshRequest payload) throws Exception {
         logger.info("Request authClamByRefreshToken :- " + payload);
         Optional<RefreshToken> refreshToken = this.refreshTokenService.findByToken(payload.getRefreshToken());
-        if (!refreshToken.isPresent()) {
+        if (refreshToken.isEmpty()) {
             return new AppResponse(BarcoUtil.ERROR, String.format(MessageUtil.DATA_NOT_FOUND, MessageUtil.REFRESH_TOKEN), payload);
         }
         AppResponse appResponse = this.refreshTokenService.verifyExpiration(refreshToken.get());
@@ -258,7 +251,8 @@ public class AuthServiceImpl implements AuthService {
      * @param userDetails
      * @return AuthResponse
      * */
-    private AuthResponse getAuthResponseDetail(AuthResponse authResponse, UserSessionDetail userDetails) throws Exception {
+    private AuthResponse getAuthResponseDetail(AuthResponse authResponse,
+        UserSessionDetail userDetails) throws Exception {
         authResponse.setId(userDetails.getId());
         authResponse.setFirstName(userDetails.getFirstName());
         authResponse.setLastName(userDetails.getLastName());
@@ -267,7 +261,7 @@ public class AuthServiceImpl implements AuthService {
         authResponse.setProfileImage(userDetails.getProfileImage());
         authResponse.setIpAddress(userDetails.getIpAddress());
         authResponse.setRoles(userDetails.getAuthorities().stream()
-           .map(grantedAuthority -> grantedAuthority.getAuthority()).collect(Collectors.toList()));
+           .map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
         if (!BarcoUtil.isNull(userDetails.getProfile())) {
             authResponse.setProfile(this.getProfilePermissionResponse(userDetails.getProfile()));
         }
